# Projet_10

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
softdesk/: settings.py  urls.py
softdesk/project/: apps.py  models.py  permissions.py  serializers.py  tests.py  views.py
softdesk/project/migrations/: 0001_initial.py  0002_alter_comment_created_time_alter_issue_created_time_and_more.py  0003_alter_issue_id_alter_project_id.py  0004_remove_project_code_comment_author_issue_assignee_and_more.py  0005_alter_contributor_project.py
softdesk/users/: apps.py  models.py  permissions.py  serializers.py  tests.py  views.py
softdesk/users/migrations/: 0001_initial.py  0002_user_created_at.py
